feat(cases): a case is a conversation, and a customer's reply joins it
Every mail of a case is a row of case_messages now (V28): the one that
opened it, every follow-up, every reply that went out. The case keeps
the facts about its opening mail for the list and the triage, and gains
last_message_at; its body and the three sent_* columns move into the
messages. The migration turns every existing case into its first
message, every sent reply into an outgoing one, and hangs the
attachments onto the message they came with.

The ingest files a mail under the conversation it answers: by the
Message-IDs it names in In-Reply-To and References, matched against
every message of the tenant, or — for clients without such headers — by
the same sender writing about the same subject (without Re:, AW:, Fwd:,
WG:) within 30 days. A match reopens the case, keeps its verdict and an
unsent draft, and records FOLLOW_UP_RECEIVED; a case in the trash never
matches. Dedup reads the messages, in both directions.

Sending answers the customer's latest mail, with the whole conversation
in References, puts the reply into the conversation and empties the
box: nothing is frozen any more, a further reply can follow. The draft
prompt carries the conversation, the newest question whole and what
went before cut shorter. The list carries lastMessageAt and
messageCount and is ordered by the former.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>